<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTool</string>
    <string name="hello_world">欢迎光临，绿农主页</string>
    <string name="action_settings">设置</string>
    
    <!-- 按钮的文字描述 -->
    <string name="login_btn_name">登录</string>
    <string name="sigin_btn_name">注册</string>
    <string name="regin_btn_name">忘记密码</string>
    
    <!-- label文字描述 -->
    <string name="username_lab_name">姓    名:</string>
    <string name="password_lab_name">密    码:</string>
    

</resources>
